// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Handles background color props 1`] = `
<body>
  <div>
    <div
      class="flex pm m0 bg--transparent"
    >
      transparent
    </div>
    <div
      class="flex pm m0 bg--white"
    >
      white
    </div>
    <div
      class="flex pm m0 bg--black"
    >
      black
    </div>
    <div
      class="flex pm m0 bg--grey-1"
    >
      grey-1
    </div>
    <div
      class="flex pm m0 bg--grey-2"
    >
      grey-2
    </div>
    <div
      class="flex pm m0 bg--grey-3"
    >
      grey-3
    </div>
    <div
      class="flex pm m0 bg--grey-4"
    >
      grey-4
    </div>
    <div
      class="flex pm m0 bg--grey-5"
    >
      grey-5
    </div>
    <div
      class="flex pm m0 bg--grey-6"
    >
      grey-6
    </div>
    <div
      class="flex pm m0 bg--grey-7"
    >
      grey-7
    </div>
    <div
      class="flex pm m0 bg--grey-8"
    >
      grey-8
    </div>
    <div
      class="flex pm m0 bg--grey-9"
    >
      grey-9
    </div>
    <div
      class="flex pm m0 bg--rose-1"
    >
      rose-1
    </div>
    <div
      class="flex pm m0 bg--rose-2"
    >
      rose-2
    </div>
    <div
      class="flex pm m0 bg--rose-3"
    >
      rose-3
    </div>
    <div
      class="flex pm m0 bg--rose-4"
    >
      rose-4
    </div>
    <div
      class="flex pm m0 bg--rose-5"
    >
      rose-5
    </div>
    <div
      class="flex pm m0 bg--rose-6"
    >
      rose-6
    </div>
    <div
      class="flex pm m0 bg--rose-7"
    >
      rose-7
    </div>
    <div
      class="flex pm m0 bg--rose-8"
    >
      rose-8
    </div>
    <div
      class="flex pm m0 bg--rose-9"
    >
      rose-9
    </div>
    <div
      class="flex pm m0 bg--red-1"
    >
      red-1
    </div>
    <div
      class="flex pm m0 bg--red-2"
    >
      red-2
    </div>
    <div
      class="flex pm m0 bg--red-3"
    >
      red-3
    </div>
    <div
      class="flex pm m0 bg--red-4"
    >
      red-4
    </div>
    <div
      class="flex pm m0 bg--red-5"
    >
      red-5
    </div>
    <div
      class="flex pm m0 bg--red-6"
    >
      red-6
    </div>
    <div
      class="flex pm m0 bg--red-7"
    >
      red-7
    </div>
    <div
      class="flex pm m0 bg--red-8"
    >
      red-8
    </div>
    <div
      class="flex pm m0 bg--red-9"
    >
      red-9
    </div>
    <div
      class="flex pm m0 bg--orange-1"
    >
      orange-1
    </div>
    <div
      class="flex pm m0 bg--orange-2"
    >
      orange-2
    </div>
    <div
      class="flex pm m0 bg--orange-3"
    >
      orange-3
    </div>
    <div
      class="flex pm m0 bg--orange-4"
    >
      orange-4
    </div>
    <div
      class="flex pm m0 bg--orange-5"
    >
      orange-5
    </div>
    <div
      class="flex pm m0 bg--orange-6"
    >
      orange-6
    </div>
    <div
      class="flex pm m0 bg--orange-7"
    >
      orange-7
    </div>
    <div
      class="flex pm m0 bg--orange-8"
    >
      orange-8
    </div>
    <div
      class="flex pm m0 bg--orange-9"
    >
      orange-9
    </div>
    <div
      class="flex pm m0 bg--yellow-1"
    >
      yellow-1
    </div>
    <div
      class="flex pm m0 bg--yellow-2"
    >
      yellow-2
    </div>
    <div
      class="flex pm m0 bg--yellow-3"
    >
      yellow-3
    </div>
    <div
      class="flex pm m0 bg--yellow-4"
    >
      yellow-4
    </div>
    <div
      class="flex pm m0 bg--yellow-5"
    >
      yellow-5
    </div>
    <div
      class="flex pm m0 bg--yellow-6"
    >
      yellow-6
    </div>
    <div
      class="flex pm m0 bg--yellow-7"
    >
      yellow-7
    </div>
    <div
      class="flex pm m0 bg--yellow-8"
    >
      yellow-8
    </div>
    <div
      class="flex pm m0 bg--yellow-9"
    >
      yellow-9
    </div>
    <div
      class="flex pm m0 bg--lime-1"
    >
      lime-1
    </div>
    <div
      class="flex pm m0 bg--lime-2"
    >
      lime-2
    </div>
    <div
      class="flex pm m0 bg--lime-3"
    >
      lime-3
    </div>
    <div
      class="flex pm m0 bg--lime-4"
    >
      lime-4
    </div>
    <div
      class="flex pm m0 bg--lime-5"
    >
      lime-5
    </div>
    <div
      class="flex pm m0 bg--lime-6"
    >
      lime-6
    </div>
    <div
      class="flex pm m0 bg--lime-7"
    >
      lime-7
    </div>
    <div
      class="flex pm m0 bg--lime-8"
    >
      lime-8
    </div>
    <div
      class="flex pm m0 bg--lime-9"
    >
      lime-9
    </div>
    <div
      class="flex pm m0 bg--green-1"
    >
      green-1
    </div>
    <div
      class="flex pm m0 bg--green-2"
    >
      green-2
    </div>
    <div
      class="flex pm m0 bg--green-3"
    >
      green-3
    </div>
    <div
      class="flex pm m0 bg--green-4"
    >
      green-4
    </div>
    <div
      class="flex pm m0 bg--green-5"
    >
      green-5
    </div>
    <div
      class="flex pm m0 bg--green-6"
    >
      green-6
    </div>
    <div
      class="flex pm m0 bg--green-7"
    >
      green-7
    </div>
    <div
      class="flex pm m0 bg--green-8"
    >
      green-8
    </div>
    <div
      class="flex pm m0 bg--green-9"
    >
      green-9
    </div>
    <div
      class="flex pm m0 bg--seafoam-1"
    >
      seafoam-1
    </div>
    <div
      class="flex pm m0 bg--seafoam-2"
    >
      seafoam-2
    </div>
    <div
      class="flex pm m0 bg--seafoam-3"
    >
      seafoam-3
    </div>
    <div
      class="flex pm m0 bg--seafoam-4"
    >
      seafoam-4
    </div>
    <div
      class="flex pm m0 bg--seafoam-5"
    >
      seafoam-5
    </div>
    <div
      class="flex pm m0 bg--seafoam-6"
    >
      seafoam-6
    </div>
    <div
      class="flex pm m0 bg--seafoam-7"
    >
      seafoam-7
    </div>
    <div
      class="flex pm m0 bg--seafoam-8"
    >
      seafoam-8
    </div>
    <div
      class="flex pm m0 bg--seafoam-9"
    >
      seafoam-9
    </div>
    <div
      class="flex pm m0 bg--teal-1"
    >
      teal-1
    </div>
    <div
      class="flex pm m0 bg--teal-2"
    >
      teal-2
    </div>
    <div
      class="flex pm m0 bg--teal-3"
    >
      teal-3
    </div>
    <div
      class="flex pm m0 bg--teal-4"
    >
      teal-4
    </div>
    <div
      class="flex pm m0 bg--teal-5"
    >
      teal-5
    </div>
    <div
      class="flex pm m0 bg--teal-6"
    >
      teal-6
    </div>
    <div
      class="flex pm m0 bg--teal-7"
    >
      teal-7
    </div>
    <div
      class="flex pm m0 bg--teal-8"
    >
      teal-8
    </div>
    <div
      class="flex pm m0 bg--teal-9"
    >
      teal-9
    </div>
    <div
      class="flex pm m0 bg--azure-1"
    >
      azure-1
    </div>
    <div
      class="flex pm m0 bg--azure-2"
    >
      azure-2
    </div>
    <div
      class="flex pm m0 bg--azure-3"
    >
      azure-3
    </div>
    <div
      class="flex pm m0 bg--azure-4"
    >
      azure-4
    </div>
    <div
      class="flex pm m0 bg--azure-5"
    >
      azure-5
    </div>
    <div
      class="flex pm m0 bg--azure-6"
    >
      azure-6
    </div>
    <div
      class="flex pm m0 bg--azure-7"
    >
      azure-7
    </div>
    <div
      class="flex pm m0 bg--azure-8"
    >
      azure-8
    </div>
    <div
      class="flex pm m0 bg--azure-9"
    >
      azure-9
    </div>
    <div
      class="flex pm m0 bg--blue-1"
    >
      blue-1
    </div>
    <div
      class="flex pm m0 bg--blue-2"
    >
      blue-2
    </div>
    <div
      class="flex pm m0 bg--blue-3"
    >
      blue-3
    </div>
    <div
      class="flex pm m0 bg--blue-4"
    >
      blue-4
    </div>
    <div
      class="flex pm m0 bg--blue-5"
    >
      blue-5
    </div>
    <div
      class="flex pm m0 bg--blue-6"
    >
      blue-6
    </div>
    <div
      class="flex pm m0 bg--blue-7"
    >
      blue-7
    </div>
    <div
      class="flex pm m0 bg--blue-8"
    >
      blue-8
    </div>
    <div
      class="flex pm m0 bg--blue-9"
    >
      blue-9
    </div>
    <div
      class="flex pm m0 bg--violet-1"
    >
      violet-1
    </div>
    <div
      class="flex pm m0 bg--violet-2"
    >
      violet-2
    </div>
    <div
      class="flex pm m0 bg--violet-3"
    >
      violet-3
    </div>
    <div
      class="flex pm m0 bg--violet-4"
    >
      violet-4
    </div>
    <div
      class="flex pm m0 bg--violet-5"
    >
      violet-5
    </div>
    <div
      class="flex pm m0 bg--violet-6"
    >
      violet-6
    </div>
    <div
      class="flex pm m0 bg--violet-7"
    >
      violet-7
    </div>
    <div
      class="flex pm m0 bg--violet-8"
    >
      violet-8
    </div>
    <div
      class="flex pm m0 bg--violet-9"
    >
      violet-9
    </div>
    <div
      class="flex pm m0 bg--magenta-1"
    >
      magenta-1
    </div>
    <div
      class="flex pm m0 bg--magenta-2"
    >
      magenta-2
    </div>
    <div
      class="flex pm m0 bg--magenta-3"
    >
      magenta-3
    </div>
    <div
      class="flex pm m0 bg--magenta-4"
    >
      magenta-4
    </div>
    <div
      class="flex pm m0 bg--magenta-5"
    >
      magenta-5
    </div>
    <div
      class="flex pm m0 bg--magenta-6"
    >
      magenta-6
    </div>
    <div
      class="flex pm m0 bg--magenta-7"
    >
      magenta-7
    </div>
    <div
      class="flex pm m0 bg--magenta-8"
    >
      magenta-8
    </div>
    <div
      class="flex pm m0 bg--magenta-9"
    >
      magenta-9
    </div>
  </div>
</body>
`;

exports[`Box Handles border color props 1`] = `
<body>
  <div>
    <div
      class="flex border pm m0 bc--transparent"
    >
      transparent
    </div>
    <div
      class="flex border pm m0 bc--white"
    >
      white
    </div>
    <div
      class="flex border pm m0 bc--black"
    >
      black
    </div>
    <div
      class="flex border pm m0 bc--grey-1"
    >
      grey-1
    </div>
    <div
      class="flex border pm m0 bc--grey-2"
    >
      grey-2
    </div>
    <div
      class="flex border pm m0 bc--grey-3"
    >
      grey-3
    </div>
    <div
      class="flex border pm m0 bc--grey-4"
    >
      grey-4
    </div>
    <div
      class="flex border pm m0 bc--grey-5"
    >
      grey-5
    </div>
    <div
      class="flex border pm m0 bc--grey-6"
    >
      grey-6
    </div>
    <div
      class="flex border pm m0 bc--grey-7"
    >
      grey-7
    </div>
    <div
      class="flex border pm m0 bc--grey-8"
    >
      grey-8
    </div>
    <div
      class="flex border pm m0 bc--grey-9"
    >
      grey-9
    </div>
    <div
      class="flex border pm m0 bc--rose-1"
    >
      rose-1
    </div>
    <div
      class="flex border pm m0 bc--rose-2"
    >
      rose-2
    </div>
    <div
      class="flex border pm m0 bc--rose-3"
    >
      rose-3
    </div>
    <div
      class="flex border pm m0 bc--rose-4"
    >
      rose-4
    </div>
    <div
      class="flex border pm m0 bc--rose-5"
    >
      rose-5
    </div>
    <div
      class="flex border pm m0 bc--rose-6"
    >
      rose-6
    </div>
    <div
      class="flex border pm m0 bc--rose-7"
    >
      rose-7
    </div>
    <div
      class="flex border pm m0 bc--rose-8"
    >
      rose-8
    </div>
    <div
      class="flex border pm m0 bc--rose-9"
    >
      rose-9
    </div>
    <div
      class="flex border pm m0 bc--red-1"
    >
      red-1
    </div>
    <div
      class="flex border pm m0 bc--red-2"
    >
      red-2
    </div>
    <div
      class="flex border pm m0 bc--red-3"
    >
      red-3
    </div>
    <div
      class="flex border pm m0 bc--red-4"
    >
      red-4
    </div>
    <div
      class="flex border pm m0 bc--red-5"
    >
      red-5
    </div>
    <div
      class="flex border pm m0 bc--red-6"
    >
      red-6
    </div>
    <div
      class="flex border pm m0 bc--red-7"
    >
      red-7
    </div>
    <div
      class="flex border pm m0 bc--red-8"
    >
      red-8
    </div>
    <div
      class="flex border pm m0 bc--red-9"
    >
      red-9
    </div>
    <div
      class="flex border pm m0 bc--orange-1"
    >
      orange-1
    </div>
    <div
      class="flex border pm m0 bc--orange-2"
    >
      orange-2
    </div>
    <div
      class="flex border pm m0 bc--orange-3"
    >
      orange-3
    </div>
    <div
      class="flex border pm m0 bc--orange-4"
    >
      orange-4
    </div>
    <div
      class="flex border pm m0 bc--orange-5"
    >
      orange-5
    </div>
    <div
      class="flex border pm m0 bc--orange-6"
    >
      orange-6
    </div>
    <div
      class="flex border pm m0 bc--orange-7"
    >
      orange-7
    </div>
    <div
      class="flex border pm m0 bc--orange-8"
    >
      orange-8
    </div>
    <div
      class="flex border pm m0 bc--orange-9"
    >
      orange-9
    </div>
    <div
      class="flex border pm m0 bc--yellow-1"
    >
      yellow-1
    </div>
    <div
      class="flex border pm m0 bc--yellow-2"
    >
      yellow-2
    </div>
    <div
      class="flex border pm m0 bc--yellow-3"
    >
      yellow-3
    </div>
    <div
      class="flex border pm m0 bc--yellow-4"
    >
      yellow-4
    </div>
    <div
      class="flex border pm m0 bc--yellow-5"
    >
      yellow-5
    </div>
    <div
      class="flex border pm m0 bc--yellow-6"
    >
      yellow-6
    </div>
    <div
      class="flex border pm m0 bc--yellow-7"
    >
      yellow-7
    </div>
    <div
      class="flex border pm m0 bc--yellow-8"
    >
      yellow-8
    </div>
    <div
      class="flex border pm m0 bc--yellow-9"
    >
      yellow-9
    </div>
    <div
      class="flex border pm m0 bc--lime-1"
    >
      lime-1
    </div>
    <div
      class="flex border pm m0 bc--lime-2"
    >
      lime-2
    </div>
    <div
      class="flex border pm m0 bc--lime-3"
    >
      lime-3
    </div>
    <div
      class="flex border pm m0 bc--lime-4"
    >
      lime-4
    </div>
    <div
      class="flex border pm m0 bc--lime-5"
    >
      lime-5
    </div>
    <div
      class="flex border pm m0 bc--lime-6"
    >
      lime-6
    </div>
    <div
      class="flex border pm m0 bc--lime-7"
    >
      lime-7
    </div>
    <div
      class="flex border pm m0 bc--lime-8"
    >
      lime-8
    </div>
    <div
      class="flex border pm m0 bc--lime-9"
    >
      lime-9
    </div>
    <div
      class="flex border pm m0 bc--green-1"
    >
      green-1
    </div>
    <div
      class="flex border pm m0 bc--green-2"
    >
      green-2
    </div>
    <div
      class="flex border pm m0 bc--green-3"
    >
      green-3
    </div>
    <div
      class="flex border pm m0 bc--green-4"
    >
      green-4
    </div>
    <div
      class="flex border pm m0 bc--green-5"
    >
      green-5
    </div>
    <div
      class="flex border pm m0 bc--green-6"
    >
      green-6
    </div>
    <div
      class="flex border pm m0 bc--green-7"
    >
      green-7
    </div>
    <div
      class="flex border pm m0 bc--green-8"
    >
      green-8
    </div>
    <div
      class="flex border pm m0 bc--green-9"
    >
      green-9
    </div>
    <div
      class="flex border pm m0 bc--seafoam-1"
    >
      seafoam-1
    </div>
    <div
      class="flex border pm m0 bc--seafoam-2"
    >
      seafoam-2
    </div>
    <div
      class="flex border pm m0 bc--seafoam-3"
    >
      seafoam-3
    </div>
    <div
      class="flex border pm m0 bc--seafoam-4"
    >
      seafoam-4
    </div>
    <div
      class="flex border pm m0 bc--seafoam-5"
    >
      seafoam-5
    </div>
    <div
      class="flex border pm m0 bc--seafoam-6"
    >
      seafoam-6
    </div>
    <div
      class="flex border pm m0 bc--seafoam-7"
    >
      seafoam-7
    </div>
    <div
      class="flex border pm m0 bc--seafoam-8"
    >
      seafoam-8
    </div>
    <div
      class="flex border pm m0 bc--seafoam-9"
    >
      seafoam-9
    </div>
    <div
      class="flex border pm m0 bc--teal-1"
    >
      teal-1
    </div>
    <div
      class="flex border pm m0 bc--teal-2"
    >
      teal-2
    </div>
    <div
      class="flex border pm m0 bc--teal-3"
    >
      teal-3
    </div>
    <div
      class="flex border pm m0 bc--teal-4"
    >
      teal-4
    </div>
    <div
      class="flex border pm m0 bc--teal-5"
    >
      teal-5
    </div>
    <div
      class="flex border pm m0 bc--teal-6"
    >
      teal-6
    </div>
    <div
      class="flex border pm m0 bc--teal-7"
    >
      teal-7
    </div>
    <div
      class="flex border pm m0 bc--teal-8"
    >
      teal-8
    </div>
    <div
      class="flex border pm m0 bc--teal-9"
    >
      teal-9
    </div>
    <div
      class="flex border pm m0 bc--azure-1"
    >
      azure-1
    </div>
    <div
      class="flex border pm m0 bc--azure-2"
    >
      azure-2
    </div>
    <div
      class="flex border pm m0 bc--azure-3"
    >
      azure-3
    </div>
    <div
      class="flex border pm m0 bc--azure-4"
    >
      azure-4
    </div>
    <div
      class="flex border pm m0 bc--azure-5"
    >
      azure-5
    </div>
    <div
      class="flex border pm m0 bc--azure-6"
    >
      azure-6
    </div>
    <div
      class="flex border pm m0 bc--azure-7"
    >
      azure-7
    </div>
    <div
      class="flex border pm m0 bc--azure-8"
    >
      azure-8
    </div>
    <div
      class="flex border pm m0 bc--azure-9"
    >
      azure-9
    </div>
    <div
      class="flex border pm m0 bc--blue-1"
    >
      blue-1
    </div>
    <div
      class="flex border pm m0 bc--blue-2"
    >
      blue-2
    </div>
    <div
      class="flex border pm m0 bc--blue-3"
    >
      blue-3
    </div>
    <div
      class="flex border pm m0 bc--blue-4"
    >
      blue-4
    </div>
    <div
      class="flex border pm m0 bc--blue-5"
    >
      blue-5
    </div>
    <div
      class="flex border pm m0 bc--blue-6"
    >
      blue-6
    </div>
    <div
      class="flex border pm m0 bc--blue-7"
    >
      blue-7
    </div>
    <div
      class="flex border pm m0 bc--blue-8"
    >
      blue-8
    </div>
    <div
      class="flex border pm m0 bc--blue-9"
    >
      blue-9
    </div>
    <div
      class="flex border pm m0 bc--violet-1"
    >
      violet-1
    </div>
    <div
      class="flex border pm m0 bc--violet-2"
    >
      violet-2
    </div>
    <div
      class="flex border pm m0 bc--violet-3"
    >
      violet-3
    </div>
    <div
      class="flex border pm m0 bc--violet-4"
    >
      violet-4
    </div>
    <div
      class="flex border pm m0 bc--violet-5"
    >
      violet-5
    </div>
    <div
      class="flex border pm m0 bc--violet-6"
    >
      violet-6
    </div>
    <div
      class="flex border pm m0 bc--violet-7"
    >
      violet-7
    </div>
    <div
      class="flex border pm m0 bc--violet-8"
    >
      violet-8
    </div>
    <div
      class="flex border pm m0 bc--violet-9"
    >
      violet-9
    </div>
    <div
      class="flex border pm m0 bc--magenta-1"
    >
      magenta-1
    </div>
    <div
      class="flex border pm m0 bc--magenta-2"
    >
      magenta-2
    </div>
    <div
      class="flex border pm m0 bc--magenta-3"
    >
      magenta-3
    </div>
    <div
      class="flex border pm m0 bc--magenta-4"
    >
      magenta-4
    </div>
    <div
      class="flex border pm m0 bc--magenta-5"
    >
      magenta-5
    </div>
    <div
      class="flex border pm m0 bc--magenta-6"
    >
      magenta-6
    </div>
    <div
      class="flex border pm m0 bc--magenta-7"
    >
      magenta-7
    </div>
    <div
      class="flex border pm m0 bc--magenta-8"
    >
      magenta-8
    </div>
    <div
      class="flex border pm m0 bc--magenta-9"
    >
      magenta-9
    </div>
  </div>
</body>
`;

exports[`Box Handles display props 1`] = `
<body>
  <div>
    <div
      class="none pm m0"
    >
      none
    </div>
    <div
      class="block pm m0"
    >
      block
    </div>
    <div
      class="inline-block pm m0"
    >
      inline-block
    </div>
    <div
      class="flex pm m0"
    >
      flex
    </div>
    <div
      class="inline-flex pm m0"
    >
      inline-flex
    </div>
    <div
      class="grid pm m0"
    >
      grid
    </div>
    <div
      class="inline-grid pm m0"
    >
      inline-grid
    </div>
    <div
      class="list-item pm m0"
    >
      list-item
    </div>
  </div>
</body>
`;

exports[`Box Handles margin props 1`] = `
<body>
  <div>
    <div
      class="flex pm m0"
    >
      0
    </div>
    <div
      class="flex pm ms"
    >
      s
    </div>
    <div
      class="flex pm mm"
    >
      m
    </div>
    <div
      class="flex pm ml"
    >
      l
    </div>
  </div>
</body>
`;

exports[`Box Handles padding props 1`] = `
<body>
  <div>
    <div
      class="flex p0 m0"
    >
      0
    </div>
    <div
      class="flex ps m0"
    >
      s
    </div>
    <div
      class="flex pm m0"
    >
      m
    </div>
    <div
      class="flex pl m0"
    >
      l
    </div>
  </div>
</body>
`;

exports[`Box Renders default 1`] = `
<div
  class="flex pm m0"
>
  box
</div>
`;
